--- a/style1.css
+++ b/style1.css
@@ -201,6 +201,8 @@ background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75
   width: 50px;
   text-align: center;
   text-decoration: none;
+     background: #3B5998;
+  color: white;
     
 }
 .facebook:hover {
